feature: route /user/me
